fixed mobile nav bleeding issue

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -123,6 +123,7 @@ body {
 .jordy-logo {
     width: 100%;
     height: auto;
+    z-index: -100;
 }
 
 .xcam-img{
